add prometheus